[tool.poetry]
name = "cheapersync"
version = "0.0.1-alpha"
description = "Cheaper Sync is a project that allow you to sync multiple tracks with less Time code generator"
authors = ["Johnnybyzhang <boyan@boyan.live>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
